# sctty

./: .gitignore  Dockerfile  README.md  sctty.cabal  stack.yaml
app/: Main.hs
